# editorconfig-core-py

./: .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  LICENSE.BSD  MANIFEST.in  README.md  README.rst  editorconfig.gedit-plugin  editorconfig.plugin  editorconfig_gedit2.py  editorconfig_gedit3.py  editorconfig_shared.py  install.sh  main.py  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: mypy.yml  runtime.yml
docs/: conf.py  index.rst
editorconfig/: __init__.py  __main__.py  _abcoll.py  compat.py  exceptions.py  fnmatch.py  handler.py  ini.py  main.py  odict.py  version.py  versiontools.py
editorconfig_plugin/: editorconfig  gedit2.py  gedit3.py  shared.py
gedit2/: editorconfig.gedit-plugin  editorconfig.py
gedit3/: editorconfig.plugin  editorconfig.py
unit-test/: .gitignore  CMakeLists.txt  create_re_utest.py
