[metadata]
name = EditorConfig
author = EditorConfig Team
license = PSF-2.0
description = EditorConfig File Locator and Interpreter for Python
url = https://editorconfig.org/
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source Code = https://github.com/editorconfig/editorconfig-core-py
    Bug Tracker = https://github.com/editorconfig/editorconfig-core-py/issues

[options]
packages = editorconfig

[options.entry_points]
console_scripts =
    editorconfig = editorconfig.__main__:main
